maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime14.Escaper
	if(getDirection() != direction.Est){
                             ^